Fixes collapsing navigation when hiding the logo

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -475,6 +475,9 @@ input[type="search"]::-webkit-search-decoration {
 // Header
 .template-header {
 	padding-top: 30px;
+	[class*="span-"] {
+		min-height: 1px;
+	}
 }
 
 .widget.companyname {
